bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if ( negative && ){
                ^