bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if ( negative && ){
    if (a<0 && b<0){
      return(true)
    }
  }
  if ( !negative && (a<0 && b>0) || (a>0 && b<0)){
    return(true)
  }
  return(false)
}